--- a/.i3/config.4
+++ b/.i3/config.4
@@ -169,7 +169,7 @@ bindsym Control+$Alt+v        exec vim-anywhere
 bindcode $Altgr+55            exec dmenu-vbox
 #        $Altgr+t
 bindcode $Altgr+28            exec dmenu-txt2speech
-#bindsym $Altgr+c             exec dmenu-countdown
+#bindsym $Altgr+c
 bindcode $Altgr+54            exec dmenu-countdown -e 'mplayer "~/data/music/rock (industrial)/Rammstein/Rammstein - Moskau.mp3"'
 
 #volume down ($Altgr+,) ($Altgr+.)
@@ -223,6 +223,7 @@ bindcode $Win+20 exec i3-input -p 'goto ' -l 1 -P 'Go: '
 ############## ASSIGNS #############
 ####################################
 
+#use xprop to find windows name/classes
 for_window [class="Magnifier|Xmessage|Gxmessage|Screenkey"] floating enable
 for_window [class="^TeamViewer.exe$|^TeamViewer$|- TeamViewer -"] floating enable
 for_window [class="realvnc-vncviewer"] floating enable
@@ -230,6 +231,7 @@ for_window [title="^xzoom"] border none; floating enable
 for_window [class="Firefox" title="^About.*"] floating enable
 for_window [class="Xarchiver" title="Xarchiver$"] floating enable
 for_window [class="Gvim" window_role="vim-anywhere"] floating enable
+for_window [class="^URxvt$" title="^getpass$"] floating enable
 for_window [class="^URxvt$" instance="scratchpad"] border 1pixel; move scratchpad
 for_window [class="MPlayer|mplayer2"] fullscreen
 
