invoke help on Win+F1 which some laptops send on F1

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -48,6 +48,7 @@ set $Space   65
 set $Insert 118
 set $Supr   119
 set $ImpPt  107
+set $F1     67
 
 #use $Win+space to drag floating windows
 floating_modifier $Win
@@ -112,6 +113,7 @@ bindsym $Win+Shift+0 move workspace number 10
 
 #apps
 bindsym  F1                   exec m-help
+bindcode $Win+$F1             exec m-help
 bindcode $Win+$Enter          exec m-terminal
 bindcode $Win+Shift+$Enter    split h
 bindcode $Alt+$Esc            exec m-launcher
