i3: use both, low and upper case hjkl keys to control size in resize mode

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -206,9 +206,13 @@ mode "resize" {
     #when pressing left, the window is resized so that it has
     #more space on its left
     bindsym h resize grow left 10 px
+    bindsym H resize grow left 10 px
     bindsym j resize shrink up 10 px
+    bindsym J resize shrink up 10 px
     bindsym k resize grow up 10 px
+    bindsym K resize grow up 10 px
     bindsym l resize shrink left 10 px
+    bindsym L resize shrink left 10 px
 
     #Exit resize mode
     #        $Altgr+r
