i3: update dmenu-countdown (c) => dmenu-alarm (a) shortcut

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -177,8 +177,8 @@ bindsym Control+$Alt+v        exec vim-anywhere
 bindcode $Altgr+55            exec dmenu-vbox
 #        $Altgr+t
 bindcode $Altgr+28            exec dmenu-txt2speech
-#bindsym $Altgr+c
-bindcode $Altgr+54            exec dmenu-countdown -e 'mplayer "~/data/music/rock (industrial)/Rammstein/Rammstein - Moskau.mp3"'
+#bindsym $Altgr+a
+bindcode $Altgr+38            exec dmenu-alarm -e 'mplayer "~/data/music/rock (industrial)/Rammstein/Rammstein - Moskau.mp3"'
 
 #volume down ($Altgr+,) ($Altgr+.)
 bindcode $Altgr+59 exec amixer -q set Master 1-
