i3: disable killing apps with mouse, sometimes trackpad is broken

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -124,7 +124,7 @@ bindcode $Alt+$Esc            exec m-launcher
 #        $Altgr+k
 bindcode $Altgr+45            kill
 #right click kills window
-bindsym --release button3     kill
+#bindsym --release button3    kill
 #bindmouse Button3            kill
 #        $Altgr+l
 bindcode $Altgr+46            exec m-killer
